[metadata]
name = cronwatch
version = 0.1.0
description = Lightweight daemon that monitors cron job execution times and alerts on drift or failure
author = cronwatch contributors
license = MIT

[options]
packages = find:
python_requires = >=3.8
install_requires =
    pyyaml>=6.0

[options.extras_require]
dev =
    pytest>=7.0
    pytest-cov

[tool:pytest]
testpaths = tests
addopts = -v --tb=short

[flake8]
max-line-length = 100
exclude = .git,__pycache__,*.egg-info
